@@ -61,5 +61,7 @@
 (test-equal +2i (expt 1+i 2))
 (test-equal -9+46i (expt 3+2i 3))
 
+(test-true (fixnum? (/ 4 2)))
+
 
 (test-results)
